-- changed --enable-perfprofiling to --enable-perf-profiling
-- changed --enable-profile to --enable-gprof-profiling
-- added --warn-unknown to warn about unknown symbols
-- added SNORT_IGNORE env var to ignore unkonwn symbols
-- commented out ppm, profile, and normalizer in snort.lua since these
   require special conditions to be enabled
-- added --dump-defaults to get Lua formatted defaults

123
-- refactored documentation
-- changed max_ip6_options to max_ip6_extensions to avoid confusion
-- disabled markup sanitizer() for correct asciidoc results
-- tweaked snort.lua and snort_defaults.lua
-- updated usage
-- removed ! from error messages
-- fixed command line vs conf output configs
-- moved log_tcpdump to log_pcap
-- changed all output filename configs to be based on module name
-- fixed -K handling
-- fixed laulert when rule has no msg
-- made some packet data available to alert_luajit
-- fixed flow init when not bound
-- tweaked stats output - no section if all counts zero
-- fixed pause/resume
-- comment out assert that doesn't apply to alert_sf_socket
-- split parse warning count out of error count
-- added workaround and FIXIT-T for nhttp test
-- added path to dynamically loaded plugins output with --list-plugins
-- commented out mpse start up foo - needs reformatting
-- added snort.detach() and fixed -j parsing
-- various parsing changes for improved error handling
-- fixed some Xcode analyzer issues
-- pulled in cmake updates from Josh
-- pulled in nhttp updates from Tom
-- applied cmake inc dir order patch from Josh

122
-- pulled thread pinning from Josh
-- snort.lua tweaks to back out random test foo
-- additional valgrind tweaks
-- fixed several Xcode static analysis warnings
-- updated config_changes
-- commented out pcre_free_study() - issue on mac
-- more refactoring of tcp session - still incomplete
-- patched cd_tcp.cc and packet_manager.cc for length underflow issue
-- fix active.max_responses default, etc.