@@ -37,6 +37,13 @@ doc/snort_manual.html
 doc/snort_manual.pdf
 doc/snort_manual.tgz
 doc/snort_manual.xml
+doc/basic.txt
+doc/codec.txt
+doc/data.txt
+doc/inspector.txt
+doc/ips_action.txt
+doc/ips_option.txt
+doc/logger.txt
 extra/rule.xxd
 extra/snort_examples-1.0.tar.gz
 install-sh
