@@ -22,9 +22,73 @@ include::tips.txt[]
 
 include::differences.txt[]
 
-== Modules
+== Basic Modules
 
-include::modules.txt[]
+Internal modules which are plugins are termed "basic".  These include
+configuration for core processing.
+
+include::basic.txt[]
+
+== Codec Modules
+
+Codec is short for coder / decoder.  These modules are used for basic
+protocol decoding, anomaly detection, and construction of active responses.
+
+include::codec.txt[]
+
+== Data Modules
+
+Data modules are adjunct configurations for use with certain inspectors.
+
+include::data.txt[]
+
+== Inspector Modules
+
+These modules perform a variety of functions, including analysis of
+protocols beyond basic decoding.
+
+include::inspector.txt[]
+
+== IPS Action Modules
+
+IPS actions allow you to perform custom actions when events are generated.
+Unlike loggers, these are invoked before thresholding and can be used to
+control external agents.
+
+include::ips_action.txt[]
+
+== IPS Option Modules
+
+IPS options are the building blocks of IPS rules.
+
+include::ips_option.txt[]
+
+== Search Engine Modules
+
+Search engines perform multipattern searching of packets and payload to find
+rules that should be evaluated.  There are currently no specific modules,
+although there are several search engine plugins.  Releated configuration
+is done with the basic detection module.
+
+////
+include::search_engine.txt[]
+////
+
+== SO Rule Modules
+
+SO rules are dynamic rules that require custom coding to perform detection
+not possible with the existing rule options.  These rules typically do not
+have associated modules.
+
+////
+include::so_rule.txt[]
+////
+
+== Logger Modules
+
+All output of events and packets is done by Loggers.
+
+include::logger.txt[]
 
 == Reference
 
