@@ -29,10 +29,10 @@ using namespace std;
 #define FTP_SERVER "ftp_server"
 
 static const char* ftp_client_help =
-    "FTP client configuration module";
+    "FTP client configuration module for use with ftp_server";
 
 static const char* ftp_server_help =
-    "main FTP module";
+    "main FTP module; ftp_client should also be configured";
 
 //-------------------------------------------------------------------------
 // client stuff
