@@ -23,6 +23,7 @@
 -- commented out ppm, profile, and normalizer in snort.lua since these
    require special conditions to be enabled
 -- added --dump-defaults to get Lua formatted defaults
+-- split doc for modules into separate sections by type
 
 123
 -- refactored documentation
